# psychic-octo-doodle

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
BrihiTube/: asgi.py  settings.py  urls.py  wsgi.py
accounts/: forms.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_age.py  0003_alter_user_age.py  0004_user_profile_pic.py  0005_alter_user_profile_pic.py  0006_remove_user_age.py  0007_remove_user_profile_pic.py
templates/: base.html
templates/accounts/: editprofile.html  profile.html  signup.html
templates/registration/: login.html  password_change_form.html  password_reset_form.html
templates/tube/: create.html  dashboard.html  search.html  video.html  videolist.html
tube/: admin.py  forms.py  models.py  urls.py  views.py
tube/migrations/: 0001_initial.py  0002_remove_video_id_alter_video_videoid.py  0003_comment.py  0004_comment_comment_date.py  0005_alter_comment_comment_date.py  0006_video_uploader.py  0007_alter_video_uploader.py  0008_video_category.py  0009_rename_category_video_category.py
